--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     ></script>
 
     <title>Responsive Dashboard</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <div class="container">
@@ -21,7 +21,7 @@
         <ul>
           <li>
             <a href="#">
-              <span class="icon"><ion-icon name="logo-vk"></ion-icon></span>
+              <span class="icon"><ion-icon name="logo-vimeo"></ion-icon></span>
               <span class="title"> Brand Name</span>
             </a>
           </li>
@@ -65,7 +65,23 @@
               <span class="title">Settings</span>
             </a>
           </li>
-        </ul>
+          <li>
+            <a href="#">
+              <span class="icon">
+                <ion-icon name="lock-closed-outline"></ion-icon>
+              </span>
+              <span class="title">Password</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="icon">
+                <ion-icon name="log-out-outline"></ion-icon>
+              </span>
+              <span class="title">Sign out</span>
+            </a>
+          </li>
+
       </div>
     </div>
     <script src="index.js"></script>
