--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="navigator">
+      <div class="navigaton">
         <ul>
           <li>
             <a href="#">
