--- a/index.html
+++ b/index.html
@@ -81,24 +81,24 @@
               <span class="title">Sign out</span>
             </a>
           </li>
-<!-- ============================Main===================== -->
-  <div class="main">
-    <div class="topbar">
-      <div class="toggle">
-        <ion-icon name="menu-outline"></ion-icon>
+        </ul>
       </div>
-      <div class="search">
-        <label>
-          <input type="text" placeholder="Search here">
-          <ion-icon name="search-outline"></ion-icon>
-        </label>
-      </div>
-      <div class="user">
-<ion-icon name="person-circle-outline"></ion-icon>
-      </div>
-    </div>
-  </div>
-
+      <!-- ============================Main===================== -->
+      <div class="main">
+        <div class="topbar">
+          <div class="toggle">
+            <ion-icon name="menu-outline"></ion-icon>
+          </div>
+          <div class="search">
+            <label>
+              <input type="text" placeholder="Search here" />
+              <ion-icon name="search-outline"></ion-icon>
+            </label>
+          </div>
+          <div class="user">
+            <ion-icon name="person-circle-outline"></ion-icon>
+          </div>
+        </div>
       </div>
     </div>
     <script src="index.js"></script>
