--- a/index.html
+++ b/index.html
@@ -193,6 +193,106 @@
               </tbody>
             </table>
           </div>
+          <!--=================New Customers-->
+
+          <div class="recentCustomers">
+            <div class="cardHeader">
+              <h2>Recent Customers</h2>
+            </div>
+            <table>
+              <tr>
+                <td width="60px">
+                  <div class="imgBX">
+                    <ion-icon name="person-outline"></ion-icon>
+                  </div>
+                </td>
+                <td>
+                  <h4>
+                    David <br />
+                    <span> Italy</span>
+                  </h4>
+                </td>
+              </tr>
+              <tr>
+                <td width="60px">
+                  <div class="imgBX">
+                    <ion-icon name="person-outline"></ion-icon>
+                  </div>
+                </td>
+                <td>
+                  <h4>
+                    Amit <br />
+                    <span> India</span>
+                  </h4>
+                </td>
+              </tr>
+              <tr>
+                <td width="60px">
+                  <div class="imgBX">
+                    <ion-icon name="person-outline"></ion-icon>
+                  </div>
+                </td>
+                <td>
+                  <h4>
+                    David <br />
+                    <span> Italy</span>
+                  </h4>
+                </td>
+              </tr>
+              <tr>
+                <td width="60px">
+                  <div class="imgBX">
+                    <ion-icon name="person-outline"></ion-icon>
+                  </div>
+                </td>
+                <td>
+                  <h4>
+                    Amit <br />
+                    <span> India</span>
+                  </h4>
+                </td>
+              </tr>
+              <tr>
+                <td width="60px">
+                  <div class="imgBX">
+                    <ion-icon name="person-outline"></ion-icon>
+                  </div>
+                </td>
+                <td>
+                  <h4>
+                    David <br />
+                    <span> Italy</span>
+                  </h4>
+                </td>
+              </tr>
+              <tr>
+                <td width="60px">
+                  <div class="imgBX">
+                    <ion-icon name="person-outline"></ion-icon>
+                  </div>
+                </td>
+                <td>
+                  <h4>
+                    Amit <br />
+                    <span> India</span>
+                  </h4>
+                </td>
+              </tr>
+              <tr>
+                <td width="60px">
+                  <div class="imgBX">
+                    <ion-icon name="person-outline"></ion-icon>
+                  </div>
+                </td>
+                <td>
+                  <h4>
+                    David <br />
+                    <span> Italy</span>
+                  </h4>
+                </td>
+              </tr>
+            </table>
+          </div>
         </div>
       </div>
     </div>
